--- a/JS_Shaker_assignment.html
+++ b/JS_Shaker_assignment.html
@@ -8,7 +8,7 @@
     <!-- All styling in the document --> 
     <style>
         html {
-            background-color: antiquewhite;
+            background-color: #747474;
             height: 100%;
             width: 100%;
             display: flex;
