Added some minor changes

--- a/JS_Shaker_assignment.html
+++ b/JS_Shaker_assignment.html
@@ -53,6 +53,7 @@
     <script src="https://raw.githack.com/HGustavs/Shaker.js/master/shaker.js"></script>
     <script>
 
+        // Script to move the object depending on the tilting coordinates.
         function initShaker() {
             shaker.on("tilt", function (edata) {
                 var picDiv = document.getElementById("picDiv");
