Minor text changes
To make things easier.

--- a/JS_Shaker_assignment.html
+++ b/JS_Shaker_assignment.html
@@ -89,6 +89,6 @@
         <div id="innerDiv"></div>
     </div>
     <p id="coordinates"></p>
-    <p>Get coordinates to 100</p>
+    <p>Try get coordinates to 100</p>
 </body>
 </html>
